BUG#16002: Make partition functions that are unsigned work properly